Update preprocessing to base the dictionaries on the parital size of the vocabulary

--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -81,7 +81,7 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -171,92 +171,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "141442 743 768\n",
-      "18280 731 612\n",
-      "182228 626 612\n",
-      "142855 618 612\n",
-      "133057 591 581\n",
-      "140860 561 563\n",
-      "33569 510 563\n",
-      "11402 509 498\n",
-      "39936 488 498\n",
-      "137934 478 438\n",
-      "182252 465 438\n",
-      "39916 436 438\n",
-      "51490 431 438\n",
-      "76485 420 415\n",
-      "76489 411 415\n",
-      "186741 403 415\n",
-      "38928 381 415\n",
-      "25430 368 412\n",
-      "115778 365 412\n",
-      "14016 360 412\n",
-      "182246 360 412\n",
-      "137574 358 412\n",
-      "14189 355 412\n",
-      "121443 355 412\n",
-      "1858 342 369\n",
-      "107941 336 323\n",
-      "133054 316 323\n",
-      "182160 306 323\n",
-      "75136 304 323\n",
-      "180891 299 323\n",
-      "24491 298 299\n",
-      "143305 297 299\n",
-      "92319 269 267\n",
-      "115807 257 267\n",
-      "35723 256 267\n",
-      "24491 251 267\n",
-      "115776 250 264\n",
-      "93534 248 264\n",
-      "39953 244 264\n",
-      "111570 243 264\n",
-      "16453 233 264\n",
-      "78572 230 264\n",
-      "172799 229 264\n",
-      "96738 224 224\n",
-      "4101 221 224\n",
-      "112667 216 224\n",
-      "39896 212 205\n",
-      "51092 212 205\n",
-      "115785 210 205\n",
-      "3589 203 202\n",
-      "1233 194 202\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "max_idx, en_max_val = max(enumerate(train_en), key=lambda x: len(x[1]))\n",
-    "_, de_max_val = max(enumerate(train_de), key=lambda x: len(x[1]))\n",
+    "# DEPRECATED METHOD\n",
     "\n",
-    "del_count = 0\n",
-    "print(max_idx, len(en_max_val), len(de_max_val))\n",
+    "# max_idx, en_max_val = max(enumerate(train_en), key=lambda x: len(x[1]))\n",
+    "# _, de_max_val = max(enumerate(train_de), key=lambda x: len(x[1]))\n",
     "\n",
-    "while len(en_max_val) > 200:\n",
-    "    del train_en[max_idx]\n",
-    "    del train_de[max_idx]\n",
+    "# del_count = 0\n",
+    "# print(max_idx, len(en_max_val), len(de_max_val))\n",
+    "\n",
+    "# while len(en_max_val) > 200:\n",
+    "#     del train_en[max_idx]\n",
+    "#     del train_de[max_idx]\n",
     "    \n",
-    "    max_idx, en_max_val = max(enumerate(train_en), key=lambda x: len(x[1]))\n",
-    "    _, de_max_val = max(enumerate(train_de), key=lambda x: len(x[1]))\n",
+    "#     max_idx, en_max_val = max(enumerate(train_en), key=lambda x: len(x[1]))\n",
+    "#     _, de_max_val = max(enumerate(train_de), key=lambda x: len(x[1]))\n",
     "    \n",
-    "    print(max_idx, len(en_max_val), len(de_max_val))\n",
+    "#     print(max_idx, len(en_max_val), len(de_max_val))\n",
     "    \n",
-    "    del_count += 1\n",
+    "#     del_count += 1\n",
     "    \n",
-    "max_length_en = len(en_max_val)\n",
-    "max_length_de = len(de_max_val)"
+    "# max_length_en = len(en_max_val)\n",
+    "# max_length_de = len(de_max_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -271,7 +215,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of Sentences: 196884\n",
+      "Number of Sentences (training): 196884\n",
+      "Number of Sentences (dev): 7883\n",
       "Max length English (training): 743\n",
       "Max length German (training): 768\n",
       "Max length English (dev): 173\n",
@@ -282,7 +227,8 @@
    "source": [
     "# print(\"Deleted:\", del_count)\n",
     "\n",
-    "print(\"Number of Sentences:\", len(train_en))\n",
+    "print(\"Number of Sentences (training):\", len(train_en))\n",
+    "print(\"Number of Sentences (dev):\", len(dev_en))\n",
     "\n",
     "print(\"Max length English (training):\", max_length_en)\n",
     "print(\"Max length German (training):\", max_length_de)\n",
@@ -295,12 +241,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Choose how large you want the training and validation sets to be\n",
+    "## Don't run this cell if you want to use the entire dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TRAIN_SIZE = 50000 # Number from 1 to 196884\n",
+    "VAL_SIZE = 2500 # Number from 1 to 7883\n",
+    "\n",
+    "idxs_train = list(range(len(train_en)))\n",
+    "random.shuffle(idxs_train)\n",
+    "idxs_train = idxs_train[0:TRAIN_SIZE]\n",
+    "\n",
+    "train_en = [train_en[i] for i in idxs_train]\n",
+    "train_de = [train_de[i] for i in idxs_train]\n",
+    "\n",
+    "idxs_val = list(range(len(dev_en)))\n",
+    "random.shuffle(idxs_val)\n",
+    "idxs_val = idxs_val[0:VAL_SIZE]\n",
+    "\n",
+    "dev_en = [dev_en[i] for i in idxs_val]\n",
+    "dev_de = [dev_de[i] for i in idxs_val]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## The following cell turns words into indexes and defines the vocabulary for both languages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,22 +378,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2, 865, 3]"
+       "768"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "de_inputs[0]"
+    "len(de_inputs[-1])"
    ]
   },
   {
@@ -436,46 +414,37 @@
     "- <sos> but where would be the nearest aed to help this patient ? <eos> \n",
     "    \n",
     "- <sos> aber wo wäre der nächste aed , um diesem patienten zu helfen ? <eos>     \n",
-    "    \n"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<sos> i need your surname . symmetrical objects generally -- spell it for me . <eos> \n",
-      "<sos> ich brauche ihren nachnamen . symmetrische objekte haben grundsätzlich – bitte buchstabieren sie ihn für mich . <eos> \n",
-      "<sos> but where would be the nearest aed to help this patient ? <eos> \n",
-      "<sos> aber wo wäre der nächste aed , um diesem patienten zu helfen ? <eos> "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "en_idx_to_word = dict((v,k) for k,v in en_vocab.items())\n",
-    "de_idx_to_word = dict((v,k) for k,v in de_vocab.items())\n",
+    "# DEPRECATED EXAMPLE\n",
     "\n",
-    "for i in en_inputs[112862]:\n",
-    "    print(en_idx_to_word[i], end=' ')\n",
+    "# en_idx_to_word = dict((v,k) for k,v in en_vocab.items())\n",
+    "# de_idx_to_word = dict((v,k) for k,v in de_vocab.items())\n",
     "\n",
-    "print(\"\")\n",
+    "# for i in en_inputs[112862]:\n",
+    "#     print(en_idx_to_word[i], end=' ')\n",
     "\n",
-    "for j in de_inputs[112862]:\n",
-    "    print(de_idx_to_word[j], end=' ')\n",
+    "# print(\"\")\n",
+    "\n",
+    "# for j in de_inputs[112862]:\n",
+    "#     print(de_idx_to_word[j], end=' ')\n",
     "    \n",
-    "print(\"\")\n",
+    "# print(\"\")\n",
     "    \n",
-    "for i in en_val[3021]:\n",
-    "    print(en_idx_to_word[i], end=' ')\n",
+    "# for i in en_val[3021]:\n",
+    "#     print(en_idx_to_word[i], end=' ')\n",
     "\n",
-    "print(\"\")\n",
+    "# print(\"\")\n",
     "\n",
-    "for j in de_val[3021]:\n",
-    "    print(de_idx_to_word[j], end=' ')\n",
+    "# for j in de_val[3021]:\n",
+    "#     print(de_idx_to_word[j], end=' ')\n",
     "    "
    ]
   },
@@ -490,41 +459,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, sentence in enumerate(en_inputs):\n",
-    "    diff = max_length_en - len(sentence)\n",
-    "    if diff == 0:\n",
-    "        continue\n",
-    "    pad_array = [0]*diff\n",
-    "    sentence = sentence + pad_array\n",
-    "    en_inputs[i] = sentence\n",
+    "# DEPRECATED METHOD\n",
     "\n",
-    "for i, sentence in enumerate(de_inputs):\n",
-    "    diff = max_length_de - len(sentence)\n",
-    "    if diff == 0:\n",
-    "        continue\n",
-    "    pad_array = [0]*diff\n",
-    "    sentence = sentence + pad_array\n",
-    "    de_inputs[i] = sentence\n",
+    "# for i, sentence in enumerate(en_inputs):\n",
+    "#     diff = max_length_en - len(sentence)\n",
+    "#     if diff == 0:\n",
+    "#         continue\n",
+    "#     pad_array = [0]*diff\n",
+    "#     sentence = sentence + pad_array\n",
+    "#     en_inputs[i] = sentence\n",
+    "\n",
+    "# for i, sentence in enumerate(de_inputs):\n",
+    "#     diff = max_length_de - len(sentence)\n",
+    "#     if diff == 0:\n",
+    "#         continue\n",
+    "#     pad_array = [0]*diff\n",
+    "#     sentence = sentence + pad_array\n",
+    "#     de_inputs[i] = sentence\n",
     "    \n",
-    "for i, sentence in enumerate(en_val):\n",
-    "    diff = max_length_en_dev - len(sentence)\n",
-    "    if diff == 0:\n",
-    "        continue\n",
-    "    pad_array = [0]*diff\n",
-    "    sentence = sentence + pad_array\n",
-    "    en_val[i] = sentence\n",
+    "# for i, sentence in enumerate(en_val):\n",
+    "#     diff = max_length_en_dev - len(sentence)\n",
+    "#     if diff == 0:\n",
+    "#         continue\n",
+    "#     pad_array = [0]*diff\n",
+    "#     sentence = sentence + pad_array\n",
+    "#     en_val[i] = sentence\n",
     "\n",
-    "for i, sentence in enumerate(de_val):\n",
-    "    diff = max_length_de_dev - len(sentence)\n",
-    "    if diff == 0:\n",
-    "        continue\n",
-    "    pad_array = [0]*diff\n",
-    "    sentence = sentence + pad_array\n",
-    "    de_val[i] = sentence"
+    "# for i, sentence in enumerate(de_val):\n",
+    "#     diff = max_length_de_dev - len(sentence)\n",
+    "#     if diff == 0:\n",
+    "#         continue\n",
+    "#     pad_array = [0]*diff\n",
+    "#     sentence = sentence + pad_array\n",
+    "#     de_val[i] = sentence"
    ]
   },
   {
@@ -538,21 +509,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "en_inputs = en_inputs[:50000]\n",
-    "de_inputs = de_inputs[:50000]\n",
-    "print(len(en_inputs))"
+    "# DEPRECATED METHOD\n",
+    "# \n",
+    "# en_inputs = en_inputs[:50000]\n",
+    "# de_inputs = de_inputs[:50000]\n",
+    "# print(len(en_inputs))"
    ]
   },
   {
@@ -564,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,10 +548,10 @@
     "en_iwslt['dev'] = en_val\n",
     "de_iwslt['dev'] = de_val\n",
     "\n",
-    "with open('data/processed/english_no_pad_sorted.pickle', 'wb') as handle:\n",
+    "with open('data/processed/english_no_pad_sorted_50k.pickle', 'wb') as handle:\n",
     "    pickle.dump(en_iwslt, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "    \n",
-    "with open('data/processed/german_no_pad_sorted.pickle', 'wb') as handle:\n",
+    "with open('data/processed/german_no_pad_sorted_50k.pickle', 'wb') as handle:\n",
     "    pickle.dump(de_iwslt, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   },
@@ -599,18 +564,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 266, 11, 3]\n",
-      "58496\n",
-      "129350\n",
-      "84\n",
-      "<sos> danke . <eos> \n",
+      "[2, 112, 931, 30, 21824, 18, 3]\n",
+      "15259\n",
+      "22796\n",
+      "125\n",
+      "<sos> wirklich . <eos> \n",
       "\n"
      ]
     }
@@ -636,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -653,10 +618,10 @@
     }
    ],
    "source": [
-    "with open('data/processed/english_no_pad_sorted.pickle', 'rb') as handle:\n",
+    "with open('data/processed/english_no_pad_sorted_10k.pickle', 'rb') as handle:\n",
     "    english = pickle.load(handle)\n",
     "    \n",
-    "with open('data/processed/german_no_pad_sorted.pickle', 'rb') as handle:\n",
+    "with open('data/processed/german_no_pad_sorted_10k.pickle', 'rb') as handle:\n",
     "    german = pickle.load(handle)\n",
     "    \n",
     "print(en_iwslt == english)\n",
@@ -731,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
