--- a/Evan Playground.ipynb
+++ b/Evan Playground.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Device: cuda:0\n"
+      "Device: cpu\n"
      ]
     }
    ],
@@ -44,16 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "path = 'data/'\n",
     "\n",
-    "with open(path + 'english_no_pad_sorted_5k.pickle', 'rb') as handle:\n",
+    "with open(path + 'english_no_pad_sorted.pickle', 'rb') as handle:\n",
     "    english = pickle.load(handle)\n",
     "    \n",
-    "with open(path + 'german_no_pad_sorted_5k.pickle', 'rb') as handle:\n",
+    "with open(path + 'german_no_pad_sorted.pickle', 'rb') as handle:\n",
     "    german = pickle.load(handle)   "
    ]
   },
@@ -320,10 +320,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tr_batches = get_batches(german['train'], english['train'], b_sz=2650)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def batchify(batch): # We need the batches to be of shape [sentence length, batch size]\n",
-    "    source_sent_len = (len(batch[0]['source']))\n",
-    "    target_sent_len = (len(batch[0]['target']))\n",
-    "    batch_size = (len(batch))\n",
+    "    source_sent_len = len(batch[0]['source'])\n",
+    "    target_sent_len = len(batch[0]['target'])\n",
+    "    batch_size = len(batch)\n",
     "    \n",
     "    source = torch.empty((source_sent_len, batch_size)).long().to(device)    \n",
     "    target = torch.empty((target_sent_len, batch_size)).long().to(device)\n",
@@ -334,7 +343,16 @@
     "    \n",
     "    return source, target\n",
     "\n",
+    "results = []\n",
+    "for i in range(100):\n",
+    "    random.shuffle(tr_batches)\n",
     "\n",
+    "    t1 = time.time()\n",
+    "    for b in tr_batches:\n",
+    "        source, target = batchify(b)\n",
+    "        \n",
+    "    results.append(time.time()-t1)\n",
+    "#     print(time.time()-t1)\n",
     "# # # Example:\n",
     "# from time import time\n",
     "# t0 = time()\n",
@@ -344,6 +362,57 @@
     "# for idx, b in enumerate(tr_batches): # TRAINING LOOP\n",
     "#     source, target = batchify(b) # returns the source and target tensors that are in the correct \n",
     "#                                  # shape to push through the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.984652853012085\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(results)/len(results))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.8320975303649902 3.990283966064453\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(min(results), max(results))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([24, 110]) torch.Size([39, 110])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(source.shape, target.shape)"
    ]
   },
   {
@@ -917,7 +986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
