Rename Batch Experiments

--- a/Batch Experiments.ipynb
+++ b/Batch Experiments.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Device: cpu\n"
+      "Device: cuda:0\n"
      ]
     }
    ],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,14 +88,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.memory_allocated(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.531226396560669\n"
+      "1.811434268951416\n"
      ]
     }
    ],
@@ -136,8 +156,8 @@
     "                pad_list_trg = [0 for d in range(dif_trg)]\n",
     "                sent['target'].extend(pad_list_trg)           \n",
     "            \n",
-    "            sent['target'] = torch.tensor(sent['target']).to(device)\n",
-    "            sent['source'] = torch.tensor(sent['source']).to(device)\n",
+    "            sent['target'] = torch.tensor(sent['target']).cpu()\n",
+    "            sent['source'] = torch.tensor(sent['source']).cpu()\n",
     "\n",
     "        \n",
     "    return batches\n",
@@ -148,7 +168,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.memory_allocated(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -156,11 +196,11 @@
      "output_type": "stream",
      "text": [
       "1550\n",
-      "176\n",
-      "176\n",
-      "176\n",
-      "176\n",
-      "176\n"
+      "45\n",
+      "45\n",
+      "45\n",
+      "45\n",
+      "45\n"
      ]
     }
    ],
@@ -173,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,8 +223,8 @@
     "    \n",
     "    batch_size = len(batch)\n",
     "    \n",
-    "    source = torch.empty((source_sent_len, batch_size)).to(device)    \n",
-    "    target = torch.empty((target_sent_len, batch_size)).to(device)\n",
+    "    source = torch.empty((source_sent_len, batch_size)).cpu()    \n",
+    "    target = torch.empty((target_sent_len, batch_size)).cpu()\n",
     "    \n",
     "    for i in range(len(batch)):\n",
     "        source[:,i] = batch[i]['source']\n",
@@ -193,31 +233,85 @@
     "    \n",
     "    return source, target\n",
     "\n",
-    "results = []\n",
-    "for i in range(100):\n",
-    "    random.shuffle(batches)\n",
+    "for b in batches:\n",
+    "    source, target = batchify(b)\n",
     "\n",
-    "    t2 = time.time()\n",
-    "    for b in batches:\n",
-    "        source, target = batchify(b)\n",
-    "    results.append(time.time()-t2)"
+    "# results = []\n",
+    "# for i in range(100):\n",
+    "#     if i%10==0: print(i)\n",
+    "#     random.shuffle(batches)\n",
+    "\n",
+    "#     t2 = time.time()\n",
+    "#     for b in batches:\n",
+    "#         source, target = batchify(b)\n",
+    "#     results.append(time.time()-t2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.751020052433014\n"
+      "tensor([[2.0000e+00, 2.0000e+00, 2.0000e+00,  ..., 2.0000e+00, 2.0000e+00,\n",
+      "         2.0000e+00],\n",
+      "        [3.0100e+02, 7.0000e+00, 6.1000e+01,  ..., 7.0000e+00, 3.3000e+01,\n",
+      "         1.0600e+02],\n",
+      "        [7.8400e+02, 8.0000e+00, 1.2000e+01,  ..., 8.0000e+00, 1.7820e+03,\n",
+      "         1.2000e+01],\n",
+      "        ...,\n",
+      "        [1.7900e+02, 1.1000e+01, 2.0700e+02,  ..., 4.3600e+02, 4.1160e+03,\n",
+      "         9.1282e+04],\n",
+      "        [3.0000e+00, 3.0000e+00, 3.0000e+00,  ..., 1.1000e+01, 1.1000e+01,\n",
+      "         1.1000e+01],\n",
+      "        [0.0000e+00, 0.0000e+00, 0.0000e+00,  ..., 3.0000e+00, 3.0000e+00,\n",
+      "         3.0000e+00]], device='cuda:0')\n"
      ]
     }
    ],
    "source": [
-    "print(sum(results)/len(results))"
+    "print(source)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Results from building the tensors of the batches in the get_batches() function as .cpu() then using the tensors as input to batchify(), on the output of batchify() put them into .cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.291543083190918 seconds/set of batches, on average\n",
+      "2.2153544425964355 3.837550640106201 min and max times (seconds)\n",
+      "32768 bytes allocated\n",
+      "1048576 bytes cached\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(results)/len(results), \"seconds/set of batches, on average\")\n",
+    "print(min(results), max(results), \"min and max times (seconds)\")\n",
+    "\n",
+    "print(torch.cuda.memory_allocated(device), \"bytes allocated\")\n",
+    "print(torch.cuda.memory_cached(device), \"bytes cached\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Results from building the tensors in batchify(), as they are a list input for this function."
    ]
   },
   {
@@ -229,36 +323,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.620661735534668 3.54709529876709\n"
+      "3.5291345620155337 seconds/set of batches, on average\n",
+      "3.422016143798828 5.263892889022827 min and max times (seconds)\n",
+      "25088 bytes allocated\n",
+      "1048576 bytes cached\n"
      ]
     }
    ],
    "source": [
-    "print(min(results), max(results))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([24, 110]) torch.Size([36, 110])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(source.shape, target.shape)"
+    "print(sum(results)/len(results), \"seconds/set of batches, on average\")\n",
+    "print(min(results), max(results), \"min and max times (seconds)\")\n",
+    "\n",
+    "print(torch.cuda.memory_allocated(device), \"bytes allocated\")\n",
+    "print(torch.cuda.memory_cached(device), \"bytes cached\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# THE REASON THINGS ARE MESSED UP IS BECAUSE THE FUNCTION JUST KEEPS USING ALREADY WRITTEN DATA"
+    "# THE REASON THINGS ARE MESSED UP IS BECAUSE THE FUNCTION JUST KEEPS USING ALREADY WRITTEN DATA\n",
+    "\n",
+    "## ONLY CALL GET_BATCHES() ONCE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Another note: you might not need to put the batch on cuda at all, as it is just a tensor of indeces. Once the the batch goes through the embedding layer, it turns the indeces into embeddings"
    ]
   },
   {
@@ -285,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
